# steam-dedicated-server

./: .gitignore  Cargo.toml  README.md  build.rs
.github/scripts/windows/: zip-folder.ps1
.github/workflows/: release.yml
resources/cs2/cfgs/: server.cfg
resources/cs2/config/: commands.txt  exec.txt
src/: main.rs
src/games/: cs2.rs  mod.rs
src/utils/: config.rs  mod.rs  paths.rs
