[package]
name = "steam-dedicated-server"
version = "0.0.1"
edition = "2021"
keywords = ["steam", "cs2", "dedicated", "server"]
authors = ["NFSS10"]
description = "A simple application to setup and run dedicated servers for Steam games"
license = "Apache-2.0"
homepage = "https://github.com/NFSS10/steam-dedicated-server"
repository = "https://github.com/NFSS10/steam-dedicated-server"
readme = "README.md"

[dependencies]
menu_rs = "0.3.1"


[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = 3
